[package]
name = "ebpf-histogram"
version = "0.1.0"
description = "The userspace portion of ebpf-histogram. To build and export histogran from ebpf code"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true


[dependencies]
aya = "0.12.0"
prometheus = "0.13.3"
